sandbox/output
StockProfit.cpp:49:5: error: use of undeclared identifier 'transactions'
    transactions[buy] = BUY;
    ^
StockProfit.cpp:50:5: error: use of undeclared identifier 'transactions'
    transactions[sell] = SELL;
    ^
2 errors generated.
make: *** [test] Error 1
